# mcp-sqlite-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: claude_desktop_config.example.json  make_sample_db.py
mcp_sqlite/: __init__.py  db.py  server.py
tests/: test_db.py
